# C-Game

./: Animal.cpp  Animal.h  Antylop.cpp  Antylop.h  CMakeLists.txt  Dandelion.cpp  Dandelion.h  Fox.cpp  Fox.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Human.cpp  Human.h  Organism.cpp  Organism.h  PineBorscht.cpp  PineBorscht.h  Plant.cpp  Plant.h  Sheep.cpp  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h  WolfBerries.cpp  WolfBerries.h  World.cpp  World.h  main.cpp
