cmake_minimum_required(VERSION 3.21)
project(projekt1)

set(CMAKE_CXX_STANDARD 14)

add_executable(projekt1 main.cpp World.h World.cpp Organism.h Organism.cpp Animal.h Animal.cpp Wolf.h Wolf.cpp Sheep.cpp Sheep.h Fox.cpp Fox.h Turtle.cpp Turtle.h Antylop.cpp Antylop.h Plant.h Plant.cpp Grass.cpp Grass.h Dandelion.h Dandelion.cpp Guarana.cpp Guarana.h WolfBerries.h WolfBerries.cpp PineBorscht.h PineBorscht.cpp Human.h Human.cpp)
